--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "keywords": [],
   "main": "src/index.js",
+  "homepage": "https://amareis.github.io/todo-courses/",
   "dependencies": {
     "classnames": "2.3.1",
     "react": "17.0.2",
